--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -98,7 +98,7 @@
                 <ul id="Menu">
                     <li><a href="{% url "core:home" %}" class="active">صفحه نخست</a></li>
                     <li><a href="#">خدمات</a></li>
-                    <li><a href="#">رویداد ها</a></li>
+                    <li><a href="{% url "event:home" %}">رویداد ها</a></li>
                     <li><a href="{% url "learning:home" %}">آموزش</a></li>
                     <li><a href="{% url "blog:home" %}">بلاگ</a></li>
                     <li><a href="{% url "core:about_us" %}">درباره ما</a></li>
