--- a/apps/core/static/core/css/style.css
+++ b/apps/core/static/core/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 .logo img {
 	width: 80%;
-	margin-bottom: 2rem;
+	/*margin-bottom: 2rem;*/
 	-webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
 }
