--- a/apps/store/templates/store/cart.html
+++ b/apps/store/templates/store/cart.html
@@ -7,6 +7,32 @@
     <div id="page-top" class="wide">
         <div id="user">
             {% if cart_has_item %}
+                <div id="page-top" class="wide">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col" style="width: 70%">عنوان</th>
+                            <th scope="col" style="width: auto">تاریخ ثبت نام</th>
+                            <th scope="col" style="width: 140px; text-align: center;">لینک</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for item in cart_item %}
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>{{ item.product.title }}</td>
+                                <td>01.01.1401</td>
+                                <td>
+                                    <button type="button" class="btn btn-outline-primary btn-equal">مشاهده</button>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    <br> <br> <br> <br> <br>
+                    اگر بشه ستون های سوم و چهارم که تاریخ و دکمه هستن، متنهاشون وسط چین بشن.
+                </div>
                 <table class="table" id="cart-table">
                     <thead>
                     <tr>
