--- a/apps/learning/templates/learning/slug.html
+++ b/apps/learning/templates/learning/slug.html
@@ -5,6 +5,56 @@
     <div id="page-top" class="wide">
         <!-- Single Service Item ////////// Just this Section is changed! -->
         {% if status %}
+            <div class="post-item">
+                <div class="row post-item-head">
+                    <div class="col-lg-6">
+                        <div class="post-name">
+                            <h1>خدمات مشاوره تحصیلی</h1>
+                            <strong class="post-date">01.01.1401</strong>
+                        </div>
+                        <hr>
+                        <p>
+                            <b>مقدمه مطلب: </b>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+                            چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی
+                            تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در
+                            شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها
+                            شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو
+                        </p>
+
+
+                    </div>
+                    <div class="col-lg-6">
+
+                        <div class="post-img">
+                            <img class="" src="images/0001.jpg" alt="">
+                        </div>
+                        <!--
+                        <div class="service-video">
+                            <div id="73832804035"><script type="text/JavaScript" src="https://www.aparat.com/embed/2QjXp?data[rnddiv]=73832804035&data[responsive]=yes"></script></div>
+                        </div>
+                        -->
+                    </div>
+                </div>
+                <div class="row service-item-body">
+                    <h1>توضیحات بیشتر:</h1>
+                    <p>
+                        توضیحات بیشتر... نوشتن متن بصورت آزاد با ادیتور ساده برای فونت و سایز متن و هدینگ دادن به متنها
+                        و ایجاد لیست و ... بدون امکان افزودن عکس یا کارهای عجیب و غریب
+                        توضیحات بیشتر... نوشتن متن بصورت آزاد با ادیتور ساده برای فونت و سایز متن و هدینگ دادن به متنها
+                        و ایجاد لیست و ... بدون امکان افزودن عکس یا کارهای عجیب و غریب
+                        توضیحات بیشتر... نوشتن متن بصورت آزاد با ادیتور ساده برای فونت و سایز متن و هدینگ دادن به متنها
+                        و ایجاد لیست و ... بدون امکان افزودن عکس یا کارهای عجیب و غریب
+                        توضیحات بیشتر... نوشتن متن بصورت آزاد با ادیتور ساده برای فونت و سایز متن و هدینگ دادن به متنها
+                        و ایجاد لیست و ... بدون امکان افزودن عکس یا کارهای عجیب و غریب
+                        توضیحات بیشتر... نوشتن متن بصورت آزاد با ادیتور ساده برای فونت و سایز متن و هدینگ دادن به متنها
+                        و ایجاد لیست و ... بدون امکان افزودن عکس یا کارهای عجیب و غریب
+                    </p>
+                </div>
+            </div>
+
+
+
             <div id="user">
                 <div class="row">
                     <div class="col-lg-12">
