--- a/apps/event/templates/event/index.html
+++ b/apps/event/templates/event/index.html
@@ -1,42 +1,75 @@
 {% extends "core/base.html" %}
-
-
+{% load jformat  %}
 
 {% block content %}
-    <div id="page-top" class="wide">
-        <div id="user">
-            <div class="row">
-                {% for event in page_obj %}
-                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 mb-30">
-                        <article class="post-container">
-                            <div class="post-thumb">
-                                <a href="{{ event.get_absolute_url }}"
-                                   class="d-block position-relative overflow-hidden">
-                                    <img src="{{ event.picture.url }}" class="img-fluid" alt="learning Post">
-                                </a>
-                            </div>
-                            <div class="post-content">
-                                <div class="entry-header">
-                                    <h3>
-                                        <a href="{{ event.get_absolute_url }}">{{ event.title| truncatechars:100 }}</a>
-                                    </h3>
-
-
-                                    <form autocomplete="off" method="post" action="{% url 'store:cart' %}">
-                                        {% csrf_token %}
-                                        <input type="text" name="product" value="{{ event.pk }}" hidden>
-                                        <input type="text" name="request_type" value="inc" hidden>
-                                        <input type="number" name="quantity" value="1" hidden>
-                                        <input type="submit" class="btn btn-primary" value="Add to Cart">
-
-                                    </form>
-                                </div>
-                            </div>
-                        </article>
-
-                    </div>
+    <div id="" class="wide">
+        <div class="filter row">
+            <div class="blog-categoty col-4">
+                <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "learning:home" %}">همه</a>
+                {% for category in categories %}
+                    <a type="button" class="btn btn-light btn-sm btn-tag"
+                       href="{% url "learning:category" category.name %}">{{ category.name }}</a>
                 {% endfor %}
             </div>
+            <div class="blog-tag col-8">
+                <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "learning:home" %}">همه</a>
+                {% for tag in tags %}
+                    <a type="button" class="btn btn-light btn-sm btn-tag"
+                       href="{% url "learning:tag" %}?tag={{ tag }}">{{ tag }}</a>
+                {% endfor %}
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            {% for event in page_obj %}
+                <div class="col-4 blog-single">
+                    <div class="blog-image">
+                        <a class="post-title" href="{{ event.get_absolute_url }}"><h1>{{ event.title }}</h1></a>
+{#                        <strong class="post-date">{{ event.start_date|jformat:"%d-%m-%Y" }}</strong>#}
+                        <strong class="post-date">{{ event.start_date|jformat:"%Y-%m-%d" }}</strong>
+                        <a href="{{ event.get_absolute_url }}">
+                            <img class="" src="{{ event.picture.url }}" alt="">
+                        </a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+{#    <div id="page-top" class="wide">#}
+{#        <div id="user">#}
+{#            <div class="row">#}
+{#                {% for event in page_obj %}#}
+{#                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 mb-30">#}
+{#                        <article class="post-container">#}
+{#                            <div class="post-thumb">#}
+{#                                <a href="{{ event.get_absolute_url }}"#}
+{#                                   class="d-block position-relative overflow-hidden">#}
+{#                                    <img src="{{ event.picture.url }}" class="img-fluid" alt="learning Post">#}
+{#                                </a>#}
+{#                            </div>#}
+{#                            <div class="post-content">#}
+{#                                <div class="entry-header">#}
+{#                                    <h3>#}
+{#                                        <a href="{{ event.get_absolute_url }}">{{ event.title| truncatechars:100 }}</a>#}
+{#                                    </h3>#}
+{##}
+{##}
+{#                                    <form autocomplete="off" method="post" action="{% url 'store:cart' %}">#}
+{#                                        {% csrf_token %}#}
+{#                                        <input type="text" name="product" value="{{ event.pk }}" hidden>#}
+{#                                        <input type="text" name="request_type" value="inc" hidden>#}
+{#                                        <input type="number" name="quantity" value="1" hidden>#}
+{#                                        <input type="submit" class="btn btn-primary" value="Add to Cart">#}
+{##}
+{#                                    </form>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </article>#}
+{##}
+{#                    </div>#}
+{#                {% endfor %}#}
+{#            </div>#}
             <div class="row">
                 <div class="col-12 mt-4">
                     <nav aria-label="Page navigation example">
