--- a/apps/learning/templates/learning/index.html
+++ b/apps/learning/templates/learning/index.html
@@ -1,5 +1,5 @@
 {% extends "core/base.html" %}
-{% load jalali_tags %}
+{% load jformat  %}
 
 
 
@@ -27,7 +27,7 @@
                 <div class="col-4 blog-single">
                     <div class="blog-image">
                         <a class="post-title" href="{{ post.get_absolute_url }}"><h1>{{ post.title }}</h1></a>
-                        <strong class="post-date">{{ post.pub_date|to_jalali:'%Y/%m/%d' }}</strong>
+                        <strong class="post-date">{{ post.pub_date|jformat:'%Y/%m/%d' }}</strong>
                         <a href="{{ post.get_absolute_url }}">
                             <img class="" src="{{ post.picture.url }}" alt="">
                         </a>
