--- a/apps/store/templates/event/index.html
+++ b/apps/store/templates/event/index.html
@@ -5,17 +5,17 @@
     <div id="" class="wide">
         <div class="filter row">
             <div class="blog-categoty col-4">
-                <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "learning:home" %}">همه</a>
+                <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "store:learning_home" %}">همه</a>
                 {% for category in categories %}
                     <a type="button" class="btn btn-light btn-sm btn-tag"
-                       href="{% url "learning:category" category.name %}">{{ category.name }}</a>
+                       href="{% url "store:learning_category" category.name %}">{{ category.name }}</a>
                 {% endfor %}
             </div>
             <div class="blog-tag col-8">
-                <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "learning:home" %}">همه</a>
+                <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "store:learning_home" %}">همه</a>
                 {% for tag in tags %}
                     <a type="button" class="btn btn-light btn-sm btn-tag"
-                       href="{% url "learning:tag" %}?tag={{ tag }}">{{ tag }}</a>
+                       href="{% url "store:learning_tag" %}?tag={{ tag }}">{{ tag }}</a>
                 {% endfor %}
             </div>
         </div>
