--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -138,35 +138,16 @@
                 {% if user.is_authenticated %}
                     <a href="{% url "store:cart" %}" class="btn btn-outline-primary btn-equal">سبد خرید</a>
                     <a href="{% url "store:orders" %}" class="btn btn-outline-primary btn-equal">سفارشات</a>
-                    {#                    <a href="{% url "store:payments" %}" class="btn btn-outline-primary btn-equal">پرداخت ها</a>#}
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-outline-secondary btn-icon"
+                           href="{% url "account:profile" %}">{{ user.username }}</a>
+                        <a type="button" href="{% url "account:logout" %}" class="btn btn-secondary btn-text"><i class="fas fa-times"
+                                                                               aria-hidden="true"></i></a>
+                    </div>
 
-                    {#                    {% if user.cart %}#}
-                    {#                        <div class="dropdown d-inline mx-3">#}
-                    {#                            <button class="btn btn-primary dropdown-toggle"#}
-                    {#                                    type="button" id="dropdownMenu2"#}
-                    {#                                    data-bs-toggle="dropdown" aria-expanded="false">#}
-                    {#                                سبد خرید#}
-                    {#                            </button>#}
-                    {#                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2"#}
-                    {#                                style="min-width: 500px;text-align: right">#}
-                    {##}
-                    {#                                {% if user.cart.cartitem_set.count >= 1 %}#}
-                    {#                                    {% for item in user.cart.cartitem_set.all %}#}
-                    {#                                        <li>#}
-                    {#                                            <p>{{ item.product.title }}</p>#}
-                    {#                                        </li>#}
-                    {#                                    {% endfor %}#}
-                    {#                                    <a class="btn btn-primary" href='#'>پرداخت</a>#}
-                    {#                                {% else %}#}
-                    {#                                    <p>سبد شما خالی است</p>#}
-                    {#                                {% endif %}#}
-                    {#                            </ul>#}
-                    {#                        </div>#}
-                    {#                    {% endif %}#}
-                    <a href="{% url "account:profile" %}" class="btn btn-outline-primary btn-equal">ورود به پورتال</a>
+
                 {% else %}
                     <a href="{% url "account:profile" %}" class="btn btn-outline-primary btn-equal">ورود به پورتال</a>
-                    {#                <a href="{% url "account:signup" %}" class="btn btn-secondary btn-equal">عضویت در سایت</a>#}
                     <a href="{% url "account:signup" %}" class="btn btn-secondary btn-equal">عضویت در سایت</a>
                 {% endif %}
             </div>
