--- a/apps/store/templates/service/slug.html
+++ b/apps/store/templates/service/slug.html
@@ -13,8 +13,6 @@
                     </div>
                     <hr>
                     {{ object.introduction | safe }}
-
-
                 </div>
                 <div class="col-lg-6">
 
@@ -27,5 +25,18 @@
                 <h1>توضیحات بیشتر:</h1>
                 {{ object.description | safe }}
             </div>
+
+            <form autocomplete="off" method="post" action="{% url 'store:cart' %}">
+                {% csrf_token %}
+                <input type="text" name="product" value="{{ service.pk }}" hidden>
+                <input type="text" name="request_type" value="inc" hidden>
+                <input type="number" name="quantity" value="1" hidden>
+                <input type="submit" class="btn btn-primary" value="اضافه به سبد خرید">
+            </form>
+            {% if request.user.is_authenticated %}
+
+            {% elif is_owner %}
+
+            {% endif %}
         </div>
 {% endblock %}
