--- a/apps/store/templates/service/category.html
+++ b/apps/store/templates/service/category.html
@@ -5,10 +5,16 @@
     <div id="" class="wide">
         <div class="filter row">
             <div class="blog-categoty col-4">
-                <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "store:learning_home" %}">همه</a>
-                {% for category in categories %}
-                    <a type="button" class="btn btn-light btn-sm btn-tag"
-                       href="{% url "store:service_category" category.name %}">{{ category.name }}</a>
+                <a type="button" class="btn btn-light btn-sm btn-tag" href="{% url "store:service_home" %}">همه</a>
+                {% for cat in categories %}
+                    <a type="button" class="btn
+                    {% if cat.name == category %}
+                        btn-dark
+                    {% else %}
+                        btn-light
+                    {% endif %}
+                     btn-sm btn-tag"
+                       href="{% url "store:service_category" cat.name %}">{{ cat.name }}</a>
                 {% endfor %}
             </div>
         </div>
