--- a/apps/store/templates/event/category.html
+++ b/apps/store/templates/event/category.html
@@ -5,10 +5,16 @@
     <div id="" class="wide">
         <div class="filter row">
             <div class="blog-categoty col-4">
-                <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "store:event_home" %}">همه</a>
-                {% for category in categories %}
-                    <a type="button" class="btn btn-light btn-sm btn-tag"
-                       href="{% url "store:event_category" category.name %}">{{ category.name }}</a>
+                <a type="button" class="btn  btn-sm btn-tag" href="{% url "store:event_home" %}">همه</a>
+                {% for cat in categories %}
+                    <a type="button" class="btn
+                     {% if cat.name == category %}
+                        btn-dark
+                    {% else %}
+                        btn-light
+                    {% endif %}
+                    btn-sm btn-tag"
+                       href="{% url "store:event_category" cat.name %}">{{ cat.name }}</a>
                 {% endfor %}
             </div>
         </div>
@@ -18,7 +24,6 @@
                 <div class="col-4 blog-single">
                     <div class="blog-image">
                         <a class="post-title" href="{{ event.get_absolute_url }}"><h1>{{ event.title }}</h1></a>
-                        {#                        <strong class="post-date">{{ event.start_date|jformat:"%d-%m-%Y" }}</strong>#}
                         <strong class="post-date">{{ event.start_date|jformat:"%Y-%m-%d" }}</strong>
                         <a href="{{ event.get_absolute_url }}">
                             <img class="" src="{{ event.picture.url }}" alt="">
