--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -36,7 +36,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="{% static "core/css/style.css" %}">
-    <link rel="stylesheet" type="text/css" href="{% static "core/css100/saeid.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "core/css/saeid.css" %}">
     <style type="text/css" media="screen, print">
         @font-face {
             font-family: "samim";
